# llm-litreviewer

./: .gitignore  CITATION.cff  README.md  pyproject.toml
article_scripts/generative/: summary_df_f1.csv  threshold_sweep_plots.py
article_scripts_complete/embedding/: embedding_figure_generation.py  f1_per_recall_embeddings.eps  run_embedding_paper.py
article_scripts_complete/generative/: cdf_visualization.py  run_generative_paper.py
articlefilter/: __init__.py  cli.py  embeddings.py  filter_class.py  grammar_tools.py  main.py  plotting.py  probs.py
articlefilter/commands/: run_binary.py  run_embedded.py  run_pure.py  run_structured.py
articlefilter/providers/: LlamaCppProvider.py  gemini_provider.py  ollama_provider.py  openai_provider.py
config/: toy_embedded.yaml
data/: combined_related_to_rabbits.csv  financialmarkets.csv  rabbits.csv
data/QWEN/: all_abstracts.csv  combined_related_to_cows.csv  combined_related_to_financial markets.csv  combined_related_to_financial markets_specific.csv  combined_related_to_polar bears.csv  combined_related_to_polarbears.csv  cows.csv  polarbears.csv  with_embedding.csv
data/WOS/: WOS_combined.csv  combined.csv  cows.txt  cows.xls  financialmarkets.txt  financialmarkets.xls  merge.py  polarbears.txt  polarbears.xls  rabbits.txt  rabbits.xls
grammars/other/: grammar.gbnf  grammar_no_whitespace.gbnf  grammar_zeros.gbnf  grammar_zeros_deepseek.gbnf
system_messages/: combined_prompt.txt  prompt.txt  secondary_filtering.txt  secondary_filtering_2.txt  secondary_filtering_3.txt
(+6 files in other folders)
